force-app/main/default/objects/Activity/fields/Assigned_To_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_s_Manager__c</fullName>
    <description>Displays the Calendar or Assigned To&apos;s Manager based on the Assigned To type.</description>
    <formula>IF(NOT(ISBLANK(Owner:Calendar.Id)), Owner:Calendar.Name, 
IF(NOT(ISBLANK(Owner:User.ID_Casesafe__c)),Owner:User.Manager.FirstName &amp;&quot; &quot;&amp; Owner:User.Manager.LastName,
NULL))</formula>
    <inlineHelpText>Displays the Calendar or Assigned To&apos;s Manager based on the Assigned To type.</inlineHelpText>
    <label>Assigned To&apos;s Manager</label>
    <type>Text</type>
</CustomField>