force-app/main/default/objects/Activity/fields/Call_Block_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Block_Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>Hit Gate Keeper</fullName>
            </value>
            <value>
                <fullName>No Answer/Busy</fullName>
            </value>
            <value>
                <fullName>Left Voicemail in General Mailbox</fullName>
            </value>
            <value>
                <fullName>Left Voicemail to Decision Maker</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Decision-Maker Unavailable</fullName>
                <isActive>false</isActive>
                <label>Decision-Maker Unavailable</label>
            </value>
            <value>
                <fullName>Disconnection/No Longer in Service/Busy</fullName>
                <isActive>false</isActive>
                <label>Disconnection/No Longer in Service/Busy</label>
            </value>
            <value>
                <fullName>Left VM</fullName>
                <isActive>false</isActive>
                <label>Left VM</label>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
                <isActive>false</isActive>
                <label>Left Voicemail</label>
            </value>
            <value>
                <fullName>Manually Removed from CBm</fullName>
                <isActive>false</isActive>
                <label>Manually Removed from CBm</label>
            </value>
            <value>
                <fullName>Negative</fullName>
                <isActive>false</isActive>
                <label>Negative</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <isActive>false</isActive>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Positive</fullName>
                <isActive>false</isActive>
                <label>Positive</label>
            </value>
            <value>
                <fullName>Recipient Hung Up</fullName>
                <isActive>false</isActive>
                <label>Recipient Hung Up</label>
            </value>
            <value>
                <fullName>Rejected - Move to Nurture</fullName>
                <isActive>false</isActive>
                <label>Rejected - Move to Nurture</label>
            </value>
            <value>
                <fullName>Rejected - Remove from call List</fullName>
                <isActive>false</isActive>
                <label>Rejected - Remove from call List</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>