force-app/main/default/objects/Activity/fields/Disposition_Set_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Set_Datetime__c</fullName>
    <label>Disposition Set On</label>
    <type>DateTime</type>
</CustomField>