force-app/main/default/objects/Activity/fields/Event_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Event_Disposition__c</fullName>
    <label>Event Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reaction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up Meeting</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>No Show – with notice</fullName>
            </value>
            <value>
                <fullName>No Show – no notice/no response</fullName>
            </value>
            <value>
                <fullName>Missed – Rescheduled</fullName>
            </value>
            <value>
                <fullName>Asked to Leave</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>