force-app/main/default/objects/Activity/fields/Five9__Five9Cost__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9Cost__c</fullName>
    <label>Five9 Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>