force-app/main/default/objects/Activity/fields/Five9__Five9DNIS__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9DNIS__c</fullName>
    <label>Five9 DNIS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>