force-app/main/default/objects/Activity/fields/Five9__Five9HandleTime__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9HandleTime__c</fullName>
    <label>Five9 Handle Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>