force-app/main/default/objects/Activity/fields/Five9__Five9TalkAndHoldTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9TalkAndHoldTimeInSeconds__c</fullName>
    <label>Five9 Talk and Hold Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>