force-app/main/default/objects/Activity/fields/Five9__Five9WrapTime__c.field-meta.xml
<CustomField>
    <fullName>Five9__Five9WrapTime__c</fullName>
    <label>Five9 After Call Work Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>