force-app/main/default/objects/Activity/fields/Five9_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Five9_Call_Time__c</fullName>
    <label>Five9_Call_Time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>