force-app/main/default/objects/Activity/fields/Joint_Call_Manager__c.field-meta.xml
<CustomField>
    <fullName>Joint_Call_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Call Manager</label>
    <type>Checkbox</type>
</CustomField>