force-app/main/default/objects/Activity/fields/Joint_Call_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Joint_Call_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Call Specialist</label>
    <type>Checkbox</type>
</CustomField>