force-app/main/default/objects/Activity/fields/Joint_Call_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Joint_Call_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Call Vendor</label>
    <type>Checkbox</type>
</CustomField>