force-app/main/default/objects/Activity/fields/One_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>One_Call_Resolution__c</fullName>
    <description>for ringDNA requested by CS</description>
    <label>One Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident resolved (first call)</fullName>
            </value>
            <value>
                <fullName>Follow-up required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>