force-app/main/default/objects/Activity/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>QAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>