force-app/main/default/objects/Activity/fields/ringdna__Abandoned_Call__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Abandoned_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked if a caller hangs up prior to the call being answered from a queue. The caller abandoned call prior to being connected</description>
    <label>Abandoned Call</label>
    <type>Checkbox</type>
</CustomField>