force-app/main/default/objects/Activity/fields/ringdna__Automated_Voicemail__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Automated_Voicemail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this indicates that an Automated Voicemail was left during the outbound call</inlineHelpText>
    <label>Automated Voicemail?</label>
    <type>Checkbox</type>
</CustomField>