force-app/main/default/objects/Activity/fields/ringdna__Automated_Voicemail_Used__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Automated_Voicemail_Used__c</fullName>
    <inlineHelpText>This is the Automated Voicemail that was left during the outbound call</inlineHelpText>
    <label>Automated Voicemail Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>