force-app/main/default/objects/Activity/fields/ringdna__Call_Duration_min__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Duration_min__c</fullName>
    <description>Call duration measured in minutes</description>
    <formula>ringdna__Call_Duration__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>