force-app/main/default/objects/Activity/fields/ringdna__Call_Flow__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Flow</label>
    <referenceTo>ringdna__Call_Flow__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>