force-app/main/default/objects/Activity/fields/ringdna__Call_Hour_Of_Day_Agent__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Hour_Of_Day_Agent__c</fullName>
    <label>Call Hour Of Day (Agent)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>