force-app/main/default/objects/Activity/fields/ringdna__Call_Hour_Of_Day_Local__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Hour_Of_Day_Local__c</fullName>
    <label>Hour Of Day (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>