force-app/main/default/objects/Activity/fields/ringdna__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Recording__c</fullName>
    <formula>IF( ISBLANK( ringdna__Call_Recording_URL__c ) , &quot;&quot;, HYPERLINK( ringdna__Call_Recording_URL__c , &quot;Listen&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recording</label>
    <type>Text</type>
</CustomField>