force-app/main/default/objects/Activity/fields/ringdna__Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>