force-app/main/default/objects/Activity/fields/ringdna__Call_Status__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>