force-app/main/default/objects/Activity/fields/ringdna__Called_Back__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Called_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the person called back. Generally linked to the use of Local Presence or Automated Voicemail</description>
    <label>Called Back?</label>
    <type>Checkbox</type>
</CustomField>