force-app/main/default/objects/Activity/fields/ringdna__Initiating_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Initiating_Record_ID__c</fullName>
    <label>Initiating Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>