force-app/main/default/objects/Activity/fields/ringdna__Local_Presence_Num__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Local_Presence_Num__c</fullName>
    <inlineHelpText>This is the Local Presence number that was used to place the outbound call</inlineHelpText>
    <label>Local Presence #</label>
    <type>Phone</type>
</CustomField>