force-app/main/default/objects/Activity/fields/ringdna__No_Answer_Number_Used__c.field-meta.xml
<CustomField>
    <fullName>ringdna__No_Answer_Number_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Answer Number Used</label>
    <type>Checkbox</type>
</CustomField>