force-app/main/default/objects/Activity/fields/ringdna__Queue_Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Queue_Hold_Time__c</fullName>
    <description>The amount of time a call has been in the queue before being picked up by and agent. It is measured in seconds</description>
    <label>Queue Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>