force-app/main/default/objects/Activity/fields/ringdna__Supervisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>ringdna__Supervisor_Notes__c</fullName>
    <label>Supervisor Notes</label>
    <type>TextArea</type>
</CustomField>