force-app/main/default/objects/Activity/fields/Scheduled_Follow_Up_on_Next_Call_Block__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Follow_Up_on_Next_Call_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Follow Up on Next Call Block</label>
    <type>Checkbox</type>
</CustomField>