force-app/main/default/objects/Activity/fields/sma__BaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>sma__BaseObjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Base Object</label>
    <referenceTo>sma__MABaseObject__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>BaseObjectIds</relationshipName>
    <type>Lookup</type>
</CustomField>