force-app/main/default/objects/Activity/fields/sma__LayerId__c.field-meta.xml
<CustomField>
    <fullName>sma__LayerId__c</fullName>
    <label>Layer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>